--- a/style.css
+++ b/style.css
@@ -1,30 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-    
+
 .noto-serif {
   font-family: "Noto Serif", serif;
   font-optical-sizing: auto;
   font-style: normal;
   font-variation-settings:
-  "width"
-  
+    "width"
+
 
 }
+
 header,
 main {
 
-    max-width: 1240px;
-    margin: 0 auto;
+  max-width: 1240px;
+  margin: 0 auto;
 
 }
 
 
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 
 
 }
@@ -32,29 +33,32 @@ main {
 
 
 
-.menu-container ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
+.menu-container ul,
+.menu-container div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
 
 }
 
 nav {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-   
-}
-
-
-ul li, .menu1, .menu2 {
-    list-style: none;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
 
 }
 
-body{
-    background: rgb(245, 248, 255);
+
+ul li,
+.menu1,
+.menu2 {
+  list-style: none;
+
+}
+
+body {
+  background: rgb(245, 248, 255);
 
 }
 
@@ -62,288 +66,467 @@ body{
 /* ....................banner.................. */
 
 
-.banner{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 30px;
-    margin-top: 30px;
-   
-  
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+  margin-top: 30px;
+
+
 
 }
-.title, .plants-content h1, .flower-content h1{
-    font-size: 3rem;
-    font-weight: 700;
+
+.title,
+.plants-content h1,
+.flower-content h1,
+.deals-section h1 {
+  font-size: 3rem;
+  font-weight: 700;
+
 
 }
-.li{
-   font-size: bold;
-   font-weight: 600;
-   color: black;
+
+.plants-content h1,
+p {
+  margin-bottom: 30px;
 }
- p,li{
-    color: rgba(44, 39, 39, 0.5);
-    font: 400;
+
+.li {
+  font-size: bold;
+  font-weight: 600;
+  color: black;
 }
-img{
-    height: 100%;
-    width: 100%;
+
+p,
+li {
+  color: rgba(44, 39, 39, 0.5);
+  font: 400;
 }
-.banner-img, .banner-content{
-    flex: 1;
+
+img {
+  width: 100%;
 }
-.banner-img{
-    border: 3px dashed gray;
-    border-radius: 5px;
+
+.banner-img,
+.banner-content {
+  flex: 1;
 }
+
 
 
 /* ......................Our Plants   ....................... */
-.plants-content{
-   text-align: center;
+.plants-content {
+  text-align: center;
 
 }
-.plants-section{
-    margin-top: 30px;
-}
-.card:nth-child(1){
-    border: 2px dashed gray;
-    
+
+.plants-section {
+  margin-top: 30px;
+
 }
 
 
-.card-content{
-    text-align: center;
-    font-weight: bold;
-}
-.card-img img{
-    height: 100%;
-    width: 100%;
+.card-img img {
+  height: 100%;
+  width: 100%;
 }
 
- .card-img {
-    height: 332px;
-    width: auto;
+.card-img {
+  height: 332px;
+  width: auto;
 
-    
+
+}
+
+.card-content-plant {
+  font: bold;
+  text-align: center;
+  padding: 5px 0;
+
 }
 
 
-.plants-container{
-   margin-top: 30px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); 
-    /* grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); */
-    align-items: center;
-    gap: 20px;
-    
-} 
-.card-btn{
-    width: 100%;
-   background: rgb(233, 90, 8);
-   color:white;
- text-align: center;
- display: flex;
- justify-content: center;
- padding:7px 0 ;
+.plants-container {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); */
+  align-items: center;
+  gap: 20px;
+
+}
+
+.card-btn {
+  width: 100%;
+  background: rgb(233, 90, 8);
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  padding: 7px 0;
 
 }
 
 /* ,,,,,,,,,,,,,,,,,,,,,flower......................... */
 
-.flower-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 40px;
-    margin-top: 70px;
+.flower-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+  margin: 150px 0 100px 0;
+
 
 }
 
 .flower-img {
-    position: relative;
-    flex: 1;
-    
-}
-.flower-img img{
-    height: 540px;
-    width: 597px;
+  position: relative;
+  flex: 1;
+  /* height:250px; */
+  /* width:250px; */
 
 }
 
-.flower-content{
-    padding: 5px;
-    height: auto;
-     width: 540px;
-     flex: 1;
-   
+.flower-img img {
+  /* width:100%;  */
+
 }
- .img-baged{
-    position: absolute;
+
+.flower-content {
+  padding: 5px;
+  height: auto;
+  width: 540px;
+  flex: 1;
+
+}
+
+.img-baged {
+  position: absolute;
   right: -90px;
   top: -90px;
- }
- .img-baged img{
-    height: 286px;
-    width: 286px;
- }
- .img-flower{
-width: 100%;
+}
 
- }
+.img-baged img {
+  height: 286px;
+  width: 100%;
+}
 
- /* ........................deals..................... */
- .deals-section{
-    margin-top: 30px;
- }
-  
- .deals-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-    border-radius: 10px;
-    margin-top: 30px;
-
- }
-  .bloom-ana {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      flex: 1;
-    }
-
-    .right-box {
-      flex: 2;
-    }
-
-    .deals-card {
-      position: relative;
-      border-radius: 10px;
-      overflow: hidden;
-      color: #fff;
-    
-     
-    }
-
-    .deals-card img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    .card-content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
-    }
-
-    .card-content h3 {
-      font-size: 20px;
-      margin: 0 0 10px;
-    }
-
-    .card-content a {
-      color: #fff;
-      padding: 6px 14px;
-      border-radius: 20px;
-      font-size: 14px;
-    }
-
-   
-    .bloom-card {
-      height: 200px;
-    }
-
-    .zabo-card {
-      height: 420px;
-    }
-
-
-
-
-
-    /* .................................colorful-section............................ */
-    .colorful-section{
-      background-image: url(./B12A02-Responsive-Flowers/assets/news-letter-bg.png);
-      background-size: cover;
-      background-position: center;
-      height: 70vh;
-      position: relative;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      margin-top: 30px;
-   
-
-    }
-   
-  
-    .colorful-content{
-      text-align: center;
-      color: white;
-      font-weight: 900;
-      font-size: 2.5rem;
-    }
-
-    .btn-input{
-      display: flex;
-      font-size: 1rem;
-      font-weight: normal;
-      justify-content: center;
-      padding: 20px 30px;
-      
-     
-    }
-    .btn-input input{
-      width: 550px;
-      padding-left: 10px;
-  
-    }
-    .btn-input button{
-      padding: 10px 20px;
-      border:1px solid ;
-      background: rgb(233, 90, 8);
-      border: none;
-
-    }
-
-/* .......................footer................. */
-.footer-section{
-  padding: 50px 50px;
- display: flex;
- justify-content: space-around;
- align-items: center;
- text-align: start;
+.img-flower {
+  /* width: 100%; */
+  height: auto;
 
 }
-.footer-logo{
+
+/* ........................deals..................... */
+
+.deals-section {
+  margin-top: 100px;
+}
+
+.deals-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  border-radius: 10px;
+
+
+}
+
+.bloom-ana {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 1;
+
+}
+
+.right-box {
+  flex: 2;
+}
+
+.deals-card {
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+  color: #fff;
+  opacity: 0.9;
+
+
+}
+
+.deals-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  /* filter: opacity(rgba(0, 0, 0, 0.548)); */
+  opacity: .8;
+
+
+}
+
+.card-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
+}
+
+.card-content h3 {
+  font-size: 40px;
+  margin: 0 0 10px;
+}
+
+.card-content a {
+  color: #fff;
+  padding: 6px 14px;
+  border-radius: 20px;
+  font-size: 14px;
+  text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
+/* .................................colorful-section............................ */
+.colorful-section {
+  background-image: url(./B12A02-Responsive-Flowers/assets/news-letter-bg.png);
+  background-size: cover;
+  background-position: center;
+  height: 70vh;
+  position: relative;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 50px;
+
+
+
+}
+
+
+.colorful-content {
+  text-align: center;
+  color: white;
+  font-weight: 900;
+  font-size: 1.5rem;
+}
+
+.btn-input {
+  display: flex;
+  font-size: 1rem;
+  font-weight: normal;
+  justify-content: center;
+  padding: 20px 30px;
+
+
+}
+
+.btn-input input {
+  width: 100%;
+  padding-left: 10px;
+
+}
+
+.btn-input button {
+  padding: 10px 20px;
+  border: 1px solid;
+  background: rgb(233, 90, 8);
+  border: none;
+
+}
+
+/* ..............flower container .............  */
+
+
+
+
+
+/* .......................footer................. */
+.footer-section {
+  padding: 50px 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  text-align: start;
+
+}
+
+.footer-logo {
   line-height: 30px;
 
 }
-.footer-logo img{
-width: 135px;
-height: 82px;
+
+.footer-logo img {
+  width: 135px;
+  height: 82px;
 
 }
 
-.menu2, .menu1{
+.menu2,
+.menu1 {
   line-height: 40px;
 
 }
-  
-.icon{
+
+.icon {
   display: flex;
   gap: 20px;
   justify-content: center;
-align-items: center;
-  
+  align-items: center;
+
 }
-    
+
+/* .................... mobile responsive.............................. */
+@media screen and (max-width: 576px) {
+
+  .footer-section,
+  .btn-input,
+  .colorful-section,
+  .bloom-ana,
+  .deals-container,
+  .flower-container,
+  .card-btn,
+  
+  nav {
+    flex-direction: column;
+  }
+
+  nav {
+    display: grid;
+    place-content: center;
+
+  }
+
+  .banner {
+    align-items: center;
+  }
+
+  .banner h1 {
+    font-size: 2rem;
+  }
+
+  
+  .zabo-card,
+  .card-img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .icon {
+    gap: 20px;
+    margin-top: 10px;
+  }
+
+
+  .plants-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .banner-img {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .flower-img {
+    height: auto;
+    width: 80%;
+
+
+  }
+
+
+  .img-baged {
+    visibility: hidden;
+
+  }
+
+  .colorful-content {
+    font-size: 1.5rem;
+
+  }
+
+  .btn-input {
+    flex-direction: row;
+    padding: 10px 10px;
+
+  }
+
+  .img-baged {
+    width: 100%;
+    width: auto;
+
+  }
+
+  .flower-content {
+    text-align: center;
+    flex: 1;
+
+  }
+
+
+  .flower-container {
+    /* display: flex; */
+    flex-direction: column;
+    /* justify-content: space-between;
+    align-items: center; */
+    /* gap: 40px; */
+    margin: 100px 0 50px 0;
+
+
+  }
+
+
+  .flower-img img {
+    width: 100%;
+
+  }
+
+  .flower-content {
+    padding: 55px;
+    height: auto;
+    /* width: 540px; */
+    flex: 1;
+
+  }
+
+  .img-flower {
+    width: 100%;
+    height: auto;
+
+  }
+
+  .card-content h3 {
+    font-size: 20px;
+  }
+
+  ul>li {
+    visibility: hidden;
+  }
+
+  .banner  {
+    flex-direction: column-reverse;
+   
+  }
+  .banner >.banner-content{
+
+     justify-content: flex-start;
+    align-items: flex-start;
+
+  }
+
+
+}
