--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ main {
 
 
 
-.menu-container ul,
-.menu-container div {
+.menu-container , .menu-container ul, .cart
+ {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -46,6 +46,7 @@ nav {
   align-items: center;
   display: flex;
   justify-content: space-between;
+  text-align: center;
 
 }
 
@@ -177,30 +178,18 @@ img {
   gap: 40px;
   margin: 150px 0 100px 0;
 
-
 }
 
 .flower-img {
   position: relative;
   flex: 1;
-  /* height:250px; */
-  /* width:250px; */
 
 }
-
-.flower-img img {
-  /* width:100%;  */
-
-}
-
 .flower-content {
-  padding: 5px;
-  height: auto;
-  width: 540px;
   flex: 1;
+  padding-left: 20px;
 
 }
-
 .img-baged {
   position: absolute;
   right: -90px;
@@ -212,11 +201,7 @@ img {
   width: 100%;
 }
 
-.img-flower {
-  /* width: 100%; */
-  height: auto;
 
-}
 
 /* ........................deals..................... */
 
@@ -321,7 +306,7 @@ img {
   text-align: center;
   color: white;
   font-weight: 900;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 .btn-input {
@@ -398,17 +383,18 @@ img {
   .bloom-ana,
   .deals-container,
   .flower-container,
-  .card-btn,
-  
-  nav {
+  .card-btn
+   {
     flex-direction: column;
   }
 
-  nav {
-    display: grid;
-    place-content: center;
+  /* nav {
+   display: flex;
+   justify-items: space-between;
+   align-items: center;
+   text-align: center;
 
-  }
+  } */
 
   .banner {
     align-items: center;
@@ -464,6 +450,7 @@ img {
     padding: 10px 10px;
 
   }
+  
 
   .img-baged {
     width: 100%;
@@ -477,16 +464,9 @@ img {
 
   }
 
-
   .flower-container {
-    /* display: flex; */
     flex-direction: column;
-    /* justify-content: space-between;
-    align-items: center; */
-    /* gap: 40px; */
     margin: 100px 0 50px 0;
-
-
   }
 
 
@@ -509,11 +489,11 @@ img {
 
   }
 
-  .card-content h3 {
-    font-size: 20px;
+  .card-content h3, .card-content a{
+    font-size: 10px;
   }
 
-  ul>li {
+  ul {
     visibility: hidden;
   }
 
@@ -522,11 +502,23 @@ img {
    
   }
   .banner >.banner-content{
+    margin-top: 20px;
 
      justify-content: flex-start;
     align-items: flex-start;
+  
 
   }
+  main, nav{
+    padding: 0 10px;
+  }
+  .logo{
+   height: 60px;
+   width: 60px;
+  }
+.colorful-content h2{
+  font-size: 20px;
+}
 
 
 }
