--- a/style.css
+++ b/style.css
@@ -488,6 +488,8 @@ img {
   .logo{
    height: 70px;
    width: 70px;
+   margin-top: 5px;
+   
   }
 .colorful-content h2{
   font-size: 20px;
@@ -501,7 +503,7 @@ img {
   }
 .flower-content h1{
   padding-left: 10px;
-  font-size: 2rem;
+  font-size: 1.6rem;
 
 }
 .flower-container{
@@ -517,11 +519,6 @@ img {
 }
 .small-card{
   border-radius: 0;
-}
-
-html, body{
-   width: 100vw;
-  height: 100vh;
 }
 
 
