--- a/style.css
+++ b/style.css
@@ -30,13 +30,18 @@ main {
 
 }
 
-.menu-container , .menu-container ul, .cart
+.menu-container , .menu-container ul
  {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
 
+}
+.cart{
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
 nav {
@@ -105,6 +110,9 @@ li {
 img {
   width: 100%;
 }
+.banner-img{
+  border: dashed rgb(225, 218, 218);
+}
 
 .banner-img,
 .banner-content {
@@ -112,6 +120,7 @@ img {
 }
 .banner-content{
   margin-top: 60px;
+  
 }
 
 
@@ -158,6 +167,11 @@ img {
   gap: 20px;
 
 }
+.first-child{
+ border: dashed rgb(225, 218, 218);
+}
+
+
 
 .card-btn {
   width: 100%;
@@ -195,12 +209,17 @@ img {
   position: absolute;
   right: -90px;
   top: -90px;
+ 
+
+
 }
 
 .img-baged img {
   max-width:100%;
   width: 300px;
   height: auto;
+  filter: drop-shadow(-4px 10px 0px #00000040);
+  
 }
 .img-flower img{
   max-width: 100%;
@@ -237,10 +256,11 @@ img {
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  border-radius: 10px;
-
+  border-radius: 20px;
 
 }
+
+
 
 .bloom-ana {
   display: flex;
@@ -256,7 +276,7 @@ img {
 
 .deals-card {
   position: relative;
-  border-radius: 10px;
+  border-radius: 15px;
   overflow: hidden;
   color: #fff;
   opacity: 0.9;
@@ -308,7 +328,7 @@ img {
   background-image: url(./B12A02-Responsive-Flowers/assets/news-letter-bg.png);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: 80vh;
   position: relative;
   color: white;
   display: flex;
@@ -476,9 +496,8 @@ img {
   }
   .banner >.banner-content{
     margin-top: 20px;
-
-     justify-content: flex-start;
-    align-items: flex-start;
+     align-items: center;
+     padding-left: 5px;
   
 
   }
@@ -497,10 +516,11 @@ img {
 }
 .flower-content ul li {
     list-style-type: disc;
-    list-style-position: inside;
+    list-style-position:inside;
     font-size: 16px;
-    padding-left: 10px;
-    text-align: left;
+    padding-left: 20px;
+    
+  
   }
 .flower-content h1{
   padding-left: 10px;
@@ -517,6 +537,15 @@ img {
 .small-card{
   border-radius: 0;
 }
+
+.colorful-section{
+  width: 100vw;
+  height: 50vh;
+}
+.first-child,.banner-img{
+  border: 0;
+}
+
 
 
 }
