--- a/style.css
+++ b/style.css
@@ -413,7 +413,8 @@ img {
   body{
     overflow-x: hidden;
   }
-
+  
+  
   .footer-section,
   .btn-input,
   .colorful-section,
@@ -431,7 +432,7 @@ img {
     align-items: center;
   }
   .card-content h3{
-    font-size: 15px;
+    font-size: 10px;
 
   }
 
@@ -539,13 +540,12 @@ img {
 }
 
 .colorful-section{
-  width: 100vw;
+  width: 100%;
   height: 50vh;
 }
 .first-child,.banner-img{
   border: 0;
 }
-
 
 
 }
